--- a/index.html
+++ b/index.html
@@ -3,21 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Título que aparece na aba do navegador -->
     <title>Simples website</title>
+
+    <!-- Importa o arquivo CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
+
+<!-- O body começa com a classe dark-theme (tema escuro padrão) -->
 <body class="dark-theme">
+
+    <!-- Título da página -->
     <h1>Task list</h1>
-    <p id="msg"> Current task:</p>
+    <p id="msg">Current task:</p>
+
     <ul>
-    <li class="list">Add visual styles</li>
-    <li class="list">Add light and dark themes</li>
-    <li>Enable switching the theme</li>
+        <li class="list">Add visual styles</li>
+        <li class="list">Add light and dark themes</li>
+        <li>Enable switching the theme</li>
     </ul>
 
-    <button class="btn">light</button>
+    <!-- Botão que será usado para trocar o tema -->
+    <button class="btn">Light</button>
 
-    <script src:"app.js"></script>
+    <!-- Importa o JavaScript (TEM que ser com =) -->
+    <script src="app.js"></script>
     <noscript>You need to enable JavaScript to view the full site</noscript>
+
 </body>
 </html>
